e2e/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: debian-test
  namespace: argocdtest
  annotations:
          # cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
   
spec:
  rules:
    - host: pocapp3.rel.polysign.io
  backend:
    serviceName: debian-test
    servicePort: 8080
  tls:
    - hosts:
      - pocapp3.rel.polysign.io
      secretName: tls-secret
